matrix.h

void* newMatrix(int length);
void deleteMatrix(void* matrix);
void printMatrix(void* matrix);

void copyIntoMatrix(void* matrix, float* data);
void copyFromMatrix(float* out, void* matrix);